--- a/Sass/main.css
+++ b/Sass/main.css
@@ -27,6 +27,15 @@ main {
   font-size: 30px;
 }
 
+footer {
+  margin: 0 auto;
+}
+footer .discord {
+  display: block;
+  margin: 0 auto;
+  width: 100px;
+}
+
 .welcome {
   text-align: center;
   font-size: 30px;
