--- a/Sass/layouts/_footer.scss
+++ b/Sass/layouts/_footer.scss
@@ -1,9 +1,12 @@
 footer{
-    margin: 0 auto;
-
     .discord{
         display: block;
         margin: 0 auto;
         width: 100px;
+    }
+
+    .footer{
+        text-align: center;
+        font-size: 25px;
     }
 }
