--- a/Sass/layouts/_navbar.scss
+++ b/Sass/layouts/_navbar.scss
@@ -12,9 +12,9 @@
             padding-left: 10px;
         }
     }
-}
 
-.welcome{
-    text-align: center;
-    font-size: 30px;
+    a{
+        text-decoration: none;
+        color: black;
+    }
 }
