--- a/Sass/main.css
+++ b/Sass/main.css
@@ -21,19 +21,19 @@ main {
 .navbar .liste .sous-liste {
   padding-left: 10px;
 }
-
-.welcome {
-  text-align: center;
-  font-size: 30px;
+.navbar a {
+  text-decoration: none;
+  color: black;
 }
 
-footer {
-  margin: 0 auto;
-}
 footer .discord {
   display: block;
   margin: 0 auto;
   width: 100px;
+}
+footer .footer {
+  text-align: center;
+  font-size: 25px;
 }
 
 .welcome {
