--- a/Sass/main.css
+++ b/Sass/main.css
@@ -36,6 +36,21 @@ footer .footer {
   font-size: 25px;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 1100px;
+  margin: 0 auto;
+}
+.grid .grid-object {
+  width: 350px;
+  margin: 0;
+}
+.grid .pexel {
+  width: 350px;
+  margin: 0;
+}
+
 .welcome {
   text-align: center;
   font-size: 30px;
@@ -47,4 +62,9 @@ footer .footer {
 .habitant .petit {
   text-align: center;
   font-size: 25px;
+}
+
+.start {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }/*# sourceMappingURL=main.css.map */
